--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		content="width=device-width, 
 					initial-scale=1.0"> 
 	<title>Transit Ipsum Generator</title> 
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 	<link rel="stylesheet" href="style.css"> 
 </head> 
 
