--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<title>Transit Ipsum Generator</title> 
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 	<link rel="stylesheet" href="style.css"> 
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 </head> 
 
 <body class="container"> 
@@ -95,7 +96,7 @@
 				be displayed here -->
 		</div> 
 	</main> 
-	<script src="script.js"> </script> 
+	<script src="./script.js"> </script> 
 </body> 
 
 </html>
